--- a/assignment2/data/assignment2.ipynb
+++ b/assignment2/data/assignment2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import skew, kurtosis\n",
     "from scipy.cluster.hierarchy import linkage, dendrogram\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -277,8 +278,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
+      "0        1          60       RL         65.0     8450   Pave   NaN      Reg   \n",
+      "1        2          20       RL         80.0     9600   Pave   NaN      Reg   \n",
+      "2        3          60       RL         68.0    11250   Pave   NaN      IR1   \n",
+      "3        4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
+      "4        5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
+      "...    ...         ...      ...          ...      ...    ...   ...      ...   \n",
+      "1455  1456          60       RL         62.0     7917   Pave   NaN      Reg   \n",
+      "1456  1457          20       RL         85.0    13175   Pave   NaN      Reg   \n",
+      "1457  1458          70       RL         66.0     9042   Pave   NaN      Reg   \n",
+      "1458  1459          20       RL         68.0     9717   Pave   NaN      Reg   \n",
+      "1459  1460          20       RL         75.0     9937   Pave   NaN      Reg   \n",
+      "\n",
+      "     LandContour Utilities  ... ScreenPorch PoolArea PoolQC  Fence  \\\n",
+      "0            Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "1            Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "2            Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "3            Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "4            Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "...          ...       ...  ...         ...      ...    ...    ...   \n",
+      "1455         Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "1456         Lvl    AllPub  ...           0        0    NaN  MnPrv   \n",
+      "1457         Lvl    AllPub  ...           0        0    NaN  GdPrv   \n",
+      "1458         Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "1459         Lvl    AllPub  ...           0        0    NaN    NaN   \n",
+      "\n",
+      "     MiscFeature MiscVal MoSold  YrSold  SaleType  SaleCondition  \n",
+      "0            NaN       0      2    2008        WD         Normal  \n",
+      "1            NaN       0      5    2007        WD         Normal  \n",
+      "2            NaN       0      9    2008        WD         Normal  \n",
+      "3            NaN       0      2    2006        WD        Abnorml  \n",
+      "4            NaN       0     12    2008        WD         Normal  \n",
+      "...          ...     ...    ...     ...       ...            ...  \n",
+      "1455         NaN       0      8    2007        WD         Normal  \n",
+      "1456         NaN       0      2    2010        WD         Normal  \n",
+      "1457        Shed    2500      5    2010        WD         Normal  \n",
+      "1458         NaN       0      4    2010        WD         Normal  \n",
+      "1459         NaN       0      6    2008        WD         Normal  \n",
+      "\n",
+      "[1460 rows x 80 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "X = data.iloc[:,:-1] # Features\n",
+    "y = data['SalePrice']  # Target\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
